--- a/today/src/components/Home.css
+++ b/today/src/components/Home.css
@@ -47,7 +47,7 @@
   .home-section {
     position: relative;
     z-index: -1;
-    background-image: var(--image-gradient), url(../Assets/Ativo\ 1@3x.png);
+    background-image: var(--image-gradient), url(../Assets/pexels-bg.jpg);
     background-position: top center;
     background-repeat: no-repeat;
     padding-bottom: 30px !important;
