--- a/today/src/components/Resume.css
+++ b/today/src/components/Resume.css
@@ -1,14 +1,14 @@
 .resume-section {
-    position: relative !important;
-    padding-top: 150px !important;
-    padding-bottom: 30px !important;
-    background-image: var(--image-gradient), url(../Assets/pexels-bg.jpg);
-    color: rgb(255, 247, 247) !important;
-  }
-  
-  .resume {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    justify-content: center;
-  }
-  
+  position: relative !important;
+  padding-top: 110px !important;
+  padding-bottom: 30px !important;
+  background-image: var(--section-background-color), url(../Assets/pexels-bg.jpg);
+  color: rgb(255, 255, 255) !important;
+}
+
+.resume {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  justify-content: center;
+}
+
